--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "svelte-navigator": "^3.2.2"
+    "socket.io-client": "^4.5.4",
+    "svelte-navigator": "^3.2.2",
+    "svelte-table": "^0.5.3"
   }
 }
