--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@zerodevx/svelte-toast": "^0.8.2",
     "svelte": "^3.54.0",
+    "svelte-typewriter": "^3.1.4",
     "vite": "^4.0.0"
   },
   "dependencies": {
